# TFrameX

./: .env copy  .gitignore  .pre-commit-config.yaml  .repomixignore  ENTERPRISE_FIXES_SUMMARY.md  README.md  agent_logic.py  agents.py  comprehensive_streaming_test.py  example.py  llms.txt  longtext.txt  model_logic.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements-test.txt  requirements.txt  systems.py  test_comprehensive_end_to_end.py  test_enterprise_fixes.py  test_real_streaming.py
builder/backend/: .repomixignore  agent_definitions.py  app.py  context.txt  flow_executor.py  longtext.txt  requirements.txt
builder/frontend/: index.html  package-lock.json  package.json  vite.config.js
data/: tframex_enterprise.db-shm  tframex_enterprise.db-wal
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CLI_GUIDE.md  CLI_REFERENCE.md  COMPREHENSIVE_GUIDE.md  ENTERPRISE.md  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  REDIS_IMPLEMENTATION_PLAN.md  TFrameX_API_Reference.md  TFrameX_Developer_Documentation.md  TFrameX_Extension_Guide.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/.docusaurus/: registry.js  (+6 more)
examples/: EXAMPLES_PROGRESS.md  README.md  context.txt  enhanced_enterprise_example.py  enterprise_config.yaml  enterprise_integration_example.py  example.py
test-project/: .env.example  .gitignore  README.md  main.py  requirements.txt
tests/: README.md  benchmark_enterprise.py  conftest.py  quick_test.py  run_tests.py  streaming_test_summary.md  test_design_patterns_streaming.py  test_enhanced_enterprise.py  test_enterprise_streaming.py  test_health_check_debug.py  test_mcp_streaming.py  test_redis_mock.py  test_redis_quick.py  test_streaming_demo.py
tframex/: __init__.py  app.py  repomix-output.xml
(+249 files in other folders)
